# SPDX-FileCopyrightText: 2009 Fermi Research Alliance, LLC
# SPDX-License-Identifier: Apache-2.0
# [build-system]
# requires = ["setuptools>=51.2", "wheel>=0.36.2", "setuptools_scm>=6.3.1"]
# build-backend = "setuptools.build_meta"
[tool.setuptools_scm]
write_to = "version.py"

# [tool.pytest.ini_options]
# minversion = "6.0"
# # -n is used by pytest-xdist. "pytest: error: unrecognized arguments: -n" means that the plugin is missing. Install the development dependencies
# # pytest-xdist is not _mandatory_ for the tests to work, but it is recommended
# addopts = "-l -v --durations=30 --durations-min=0.05 --strict-config --strict-markers --showlocals -n 4"
# log_level = "debug"
# testpaths = "src/decisionengine"
# required_plugins = ["pytest-timeout>=1.4.2", "pytest-postgresql >= 3.0.0"]
# timeout = 90
# flake8-max-line-length = "120"
# flake8-ignore = "E501 E303 E302 E261 E265 E203 W503 W504"
# flake8-show-source = "True"
# flake8-statistics = "True"
[tool.black]
line-length = 120
target-version = ["py36"]

[tool.codespell]
exclude-file = ".codespell/ignore_lines.txt"
ignore-words = ".codespell/ignore_words.txt"

[tool.isort]
src_paths = ["doc", "src"]
py_version = 36
profile = "black"
line_length = 120
combine_star = "True"
float_to_top = "True"
order_by_type = "True"
dedup_headings = "True"
known_first_party = ["glideinwms"]
lines_between_types = 1
force_alphabetical_sort_within_sections = "True"

[tool.ruff]
line-length = 120
# indent-width = 4
target-version = "py37"
# Gives an error w/ format
extend-exclude = ["creation/lib/factory_defaults.xml"]

[tool.ruff.format]
#exclude = ["creation/lib/factory_defaults.xml"]
